2017-10-27  Franz Holzinger <franz@ttproducts.de>
    * rename namespace method usesBasket into useBasket
    * add new method transactionChangeValues to the GatewayBase for the change of a field in the current record of the transactor table
    * API modification: add the order number and the notification email
    * give extension informations in the details array transactionDetailsArray
    * bugfix for the usage of the gatewayid: This is the internal transaction id used by any external gateway

2017-10-07  Franz Holzinger <franz@ttproducts.de>
    * move all images, icons and logos from the res/ folder into Resources/Public/Icons/

2017-10-05  Franz Holzinger <franz@ttproducts.de>
    * change in the new API: no parameter for transactionGetForm. The configuration can be read in by "$conf = $this->getConf();" .
    * The name of the payment method does not need a transactor prefix.
    * Read in all possible errors into a string which is added to the end of the return error message.
    * new methods getSupportedGatewayArray and setSupportedGatewayArray

2017-10-02  Franz Holzinger <franz@ttproducts.de>
    * add the backwards compatible API under the name PaymentPreviousApi.php because only this supports PHP 5.3 and the former transactor classes

2017-09-30  Franz Holzinger <franz@ttproducts.de>
    * new namespace API and classes. This feature must be activated in the Extension Manager compatibility = 0

2017-09-30  Franz Holzinger <franz@ttproducts.de>
    * readd the file ext_autoload.php

2017-08-14 Franz Holzinger <franz@ttproducts.de>
    * replace TABs by 4 blanks
    * write TRUE, FALSE and NULL in lower case letters: true, false, null

2017-05-30 Franz Holzinger <franz@ttproducts.de>
    * bugfix: replace tx_div2007_alpha::getTypoLink_fh002 by tx_div2007_alpha5::getTypoLink_fh003

2017-05-10 Franz Holzinger <franz@ttproducts.de>
    * works with TYPO3 8.x
    * bugfix: replace getLL_fh002 by getLL_fh003