@@ -26,7 +26,7 @@
   "require": {
     "php": ">=5.3.3,<7.99.99",
     "typo3/cms-core": ">=4.5.0,<8.99.99",
-    "jambagecom/div2007": ">=1.7.0"
+    "typo3-ter/div2007": ">=1.7.0"
   },
   "autoload": {
     "psr-4": {
